--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="img/favicon.ico">
 
     <title>TedX - University of Dundee 2015</title>
 
@@ -41,17 +41,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"></a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
+        <div id="navbar" class="navbar-collapse collapse" >
           <ul class="nav navbar-nav">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">2015 <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">2015
+                <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="#">Venue</a></li>
                 <li><a href="#">Speakers</a></li>
                 <li><a href="#">Committee</a></li>
                 <li><a href="#">Theme</a></li>
+                <li><a href="#">Sponsors</a></li>
+
 
                 <!--<li class="divider"></li>-->
                 <!--<li class="dropdown-header">Nav header</li>-->
@@ -68,14 +70,18 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Navbar example</h1>
+        <h1>LOL</h1>
         <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
         <p>To see the difference between static and fixed top navbars, just scroll.</p>
         <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
         </p>
       </div>
+      <!--WE NEED A NAVIGATION CONTROLS LIKE: TOP -> NEXT -->
 
+      <!-- FOOTER -->
+      <footer>
+        <p class="pull-left"><a href="#">Back to top</a></p>
+      </footer>
     </div> <!-- /container -->
 
 
