Minor edits and put contact in the footer as a button

--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h3 class="brand-heading">Inspire to change,</h>
+                        <h3 class="brand-heading">Inspire to change,</h3>
                         <h4> change to inspire!</h4>
                             <i class="fa fa-angle-double-down animated"></i>
-                        </a>
                     </div>
                 </div>
             </div>
@@ -139,14 +138,12 @@
     <!-- Footer -->
     <footer id="foot"> 
          <ul class="list-inline banner-social-buttons text-center">
-         <li>
          <a href="https://twitter.com/TEDxUoDundee" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> 
          <span class="network-name">Twitter</span></a>
          <a href="https://www.facebook.com/TEDxUoD" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> 
          <span class="network-name">Facebook</span></a>
-        <a href="mailto:contact@tedxuod.co.uk">contact@tedxuod.co.uk</a>
-            
-        </div>
+        <a href="mailto:contact@tedxuod.co.uk" class="btn btn-default btn-lg">contact@tedxuod.co.uk</a>
+         </ul>
     </footer>
 
     <!-- jQuery -->
