--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <!-- Map Section -->
     <div id="map"></div>
     
-    <!-- Ticket Section -->   
+    <!-- Sponsors section -->
     </section>
        <section id="sponsors" class="container content-section text-center">
         <div class="row">
@@ -125,12 +125,10 @@
         </div>
     </section>
 
-    <!-- About Sponsors -->
+    <!-- Tickets section -->
     <section id="ticket" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Comming soon!</h2> 
-            </div>
+        <div style="width:100%; text-align:left;" >
+            <iframe src="http://www.eventbrite.com/tickets-external?eid=4653432542&ref=etckt&v=2" frameborder="0" height="256" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
         </div>
     </section>
 
