--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+<!--TODO: bigger navbar on landing page
+          discuss fonts
+          generic speakers div
+          generic sponsors div
+          clean up and minimisation
+          -->
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +26,6 @@
     <!-- Custom Fonts -->
     <link href="font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <!-- <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"> -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -40,8 +45,8 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <img id="main-logo" src="img/TEDx_logo_full_white_bg_white.svg" class='img-responsive'/></a>
+                <a class="navbar-btn page-scroll" href="#page-top">
+                    <img id="main-logo" src="img/TEDx_logo_full_white_bg_white.svg" class='img-responsive pull-left navbar-vertical-align'/></a>
                 </a>
             </div>
 
@@ -98,7 +103,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About us </h2>
-                <p>blablabla blablabla <a href="#map">map</a></p> blablabla <a href="#contact">contact us</a></p>
+                <p>blablabla blablabla <a href="#map">map</a></p> blablabla <a href="#foot">contact us</a></p>
             </div>
         </div>
     </section>
@@ -106,7 +111,7 @@
     <section id="speakers" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Comming soon!</h2>
+                <h2>Coming soon!</h2>
             </div>
         </div>
     </section>
@@ -120,7 +125,7 @@
        <section id="sponsors" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Comming soon!</h2>     
+                <h2>Coming soon!</h2>
             </div>
         </div>
     </section>
