--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-btn page-scroll" href="#page-top">
-                    <img id="main-logo" src="img/TEDx_logo_full_white_bg_white.svg" class='img-responsive pull-left navbar-vertical-align'/></a>
+                    <img id="main-logo" src="img/TEDx_logo_full_white_bg_white.svg" class='img-responsive pull-left navbar-vertical-align'/>
                 </a>
+                <!--<a class="navbar-brand page-scroll" href="#page-top">-->
+                    <!--<i class="fa fa-play-circle"></i>  <span class="light">Start</span> Bootstrap-->
+                <!--</a>-->
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,14 +76,13 @@
                         <a class="page-scroll" href="#ticket">Tickets</a>
                     </li>
                     <li>
-                    <a class="fa fa-envelope-square page-scroll" href="#foot"></a>
+                        <a class="fa fa-envelope-square page-scroll" href="#foot"></a>
                     </li>
 
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
+        </div><!-- /.container -->
     </nav>
 
     <!-- Intro Header -->
@@ -89,9 +91,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h3 class="brand-heading">Inspire to change,</h3>
-                        <h4> change to inspire!</h4>
+                        <!--<h3 class="brand-heading">Inspire to change,</h3>-->
+                        <h1>Inspire to change, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;change to inspire!</h1>
+
+                        <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -102,38 +108,111 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About us </h2>
-                <p>blablabla blablabla <a href="#map">map</a></p> blablabla <a href="#foot">contact us</a></p>
+                <h2>About us</h2>
+                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template
+                    on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and
+                    you can use it for any purpose, personal or commercial.</p>
+                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps
+                    skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
+                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
             </div>
         </div>
     </section>
+
     <!-- About Speakers -->
     <section id="speakers" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Coming soon!</h2>
+                <h2>Speakers</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <img src="http://placehold.it/300/c1ab87/fff.png" class='img-responsive pull-right navbar-vertical-align img-circle'
+                        style="width:60%;height:auto;"/>
+            </div>
+            <div class="col-md-9">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a type specimen book. </p>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-9">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a type specimen book. </p>
+            </div>
+            <div class="col-md-3">
+                <img src="http://placehold.it/300/de935f/fff.png" class='img-responsive pull-left navbar-vertical-align img-circle'
+                        style="width:60%;height:auto;"/>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-3">
+                <img src="http://placehold.it/300/cd3700/fff.png" class='img-responsive pull-right navbar-vertical-align img-circle'
+                        style="width:60%;height:auto;"/>
+            </div>
+            <div class="col-md-9">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a type specimen book. </p>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-9">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a type specimen book. </p>
+            </div>
+            <div class="col-md-3">
+                <img src="http://placehold.it/300/cd0000/fff.png" class='img-responsive pull-left navbar-vertical-align img-circle'
+                        style="width:60%;height:auto;"/>
             </div>
         </div>
     </section>
 
 
     <!-- Map Section -->
-    <div id="map"></div>
-    
-    <!-- Sponsors section -->
-    </section>
-       <section id="sponsors" class="container content-section text-center">
-        <div class="row">
+    <section id="map" class="container content-section text-center">
+    <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Coming soon!</h2>
+                <h2>Location</h2>
             </div>
         </div>
+    <div id="GoogleMap"></div>
+    </section>
+    
+    <!-- Sponsors section -->
+    <section id="sponsors" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Sponsors</h2>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+
+                  <div class="col-md-3"><img src="http://placehold.it/200x150/c1ab87" alt="Image" style="max-width:100%;"></div>
+                  <div class="col-md-3"><img src="http://placehold.it/200x150/de935f" alt="Image" style="max-width:100%;"></div>
+                  <div class="col-md-3"><img src="http://placehold.it/200x150/c1ab87" alt="Image" style="max-width:100%;"></div>
+                  <div class="col-md-3"><img src="http://placehold.it/200x150/de935f" alt="Image" style="max-width:100%;"></div>
+            </div><!--.row-->
+        </div><!--.container-->
     </section>
 
     <!-- Tickets section -->
     <section id="ticket" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Tickets</h2>
+            </div>
+        </div>
         <div style="width:100%; text-align:left;" >
-            <iframe src="http://www.eventbrite.com/tickets-external?eid=4653432542&ref=etckt&v=2" frameborder="0" height="256" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
+            <iframe src="http://www.eventbrite.com/tickets-external?eid=4653432542&ref=etckt&v=2" frameborder="0" height="280" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
         </div>
     </section>
 
@@ -159,7 +238,30 @@
     <script src="js/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+    <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>-->
+    <script src="http://maps.googleapis.com/maps/api/js"></script>
+    <script>
+        var myCenter= new google.maps.LatLng(56.459399, -2.982406);
+        function initialize() {
+            var mapProp = {
+                center: myCenter,
+                zoom: 17,
+                scrollwheel: false,
+                draggable: false,
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+            };
+            var map = new google.maps.Map(document.getElementById("GoogleMap"), mapProp);
+
+        var marker = new google.maps.Marker({
+            position: myCenter,
+        });
+
+        marker.setMap(map);
+        }
+
+        google.maps.event.addDomListener(window, 'load', initialize);
+
+    </script>
 
     <!-- Custom Theme JavaScript -->
     <script src="js/custom.js"></script>
