Minor edit on the header intro

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <!--<h3 class="brand-heading">Inspire to change,</h3>-->
-                        <h1>Inspire to change, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <h1>Inspire change, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;change to inspire!</h1>
 
                         <a href="#about" class="btn btn-circle page-scroll">
