Edited the size of speaker photos

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         </div>
         <div class="row">
             <div class="col-md-3">
-                <img src="http://placehold.it/300/c1ab87/fff.png" class='img-responsive pull-right navbar-vertical-align img-circle'
-                        style="width:60%;height:auto;"/>
+                <img src="http://placehold.it/150/c1ab87/fff.png" class='img-responsive pull-right navbar-vertical-align img-circle'
+                        style="max-width:100%;height:auto;"/>
             </div>
             <div class="col-md-9">
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -145,15 +145,15 @@
                     printer took a galley of type and scrambled it to make a type specimen book. </p>
             </div>
             <div class="col-md-3">
-                <img src="http://placehold.it/300/de935f/fff.png" class='img-responsive pull-left navbar-vertical-align img-circle'
-                        style="width:60%;height:auto;"/>
+                <img src="http://placehold.it/150/de935f/fff.png" class='img-responsive pull-left navbar-vertical-align img-circle'
+                        style="max-width:100%;height:auto;"/>
             </div>
         </div>
         <br>
         <div class="row">
             <div class="col-md-3">
-                <img src="http://placehold.it/300/cd3700/fff.png" class='img-responsive pull-right navbar-vertical-align img-circle'
-                        style="width:60%;height:auto;"/>
+                <img src="http://placehold.it/150/cd3700/fff.png" class='img-responsive pull-right navbar-vertical-align img-circle'
+                        style="max-width:100%;height:auto;"/>
             </div>
             <div class="col-md-9">
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -169,8 +169,8 @@
                     printer took a galley of type and scrambled it to make a type specimen book. </p>
             </div>
             <div class="col-md-3">
-                <img src="http://placehold.it/300/cd0000/fff.png" class='img-responsive pull-left navbar-vertical-align img-circle'
-                        style="width:60%;height:auto;"/>
+                <img src="http://placehold.it/150/cd0000/fff.png" class='img-responsive pull-left navbar-vertical-align img-circle'
+                        style="max-width:100%;height:auto;"/>
             </div>
         </div>
     </section>
