Speakers containers were removed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <!--TODO: bigger navbar on landing page
           discuss fonts
           clean up and minimisation
+          who to make it preview nicely in facebook and twitter?
           -->
 
     <meta charset="utf-8">
@@ -13,7 +14,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>TEDx - University of Dundee</title>
+    <title>TEDx University of Dundee - Make a difference</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -90,8 +91,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <!--<h3 class="brand-heading">Inspire to change,</h3>-->
-                        <h1>Inspire change, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;change to inspire!</h1>
+                        <h3>Make &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;a difference</h3>
 
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -128,53 +129,6 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Speakers</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3">
-                <img src="http://placehold.it/150/c1ab87/fff.png" class='img-responsive pull-right navbar-vertical-align img-circle'
-                        style="max-width:100%;height:auto;"/>
-            </div>
-            <div class="col-md-9">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a type specimen book. </p>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-md-9">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a type specimen book. </p>
-            </div>
-            <div class="col-md-3">
-                <img src="http://placehold.it/150/de935f/fff.png" class='img-responsive pull-left navbar-vertical-align img-circle'
-                        style="max-width:100%;height:auto;"/>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-md-3">
-                <img src="http://placehold.it/150/cd3700/fff.png" class='img-responsive pull-right navbar-vertical-align img-circle'
-                        style="max-width:100%;height:auto;"/>
-            </div>
-            <div class="col-md-9">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a type specimen book. </p>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-md-9">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a type specimen book. </p>
-            </div>
-            <div class="col-md-3">
-                <img src="http://placehold.it/150/cd0000/fff.png" class='img-responsive pull-left navbar-vertical-align img-circle'
-                        style="max-width:100%;height:auto;"/>
             </div>
         </div>
     </section>
