--- a/index.html
+++ b/index.html
@@ -107,19 +107,30 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About us</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a type specimen book.
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a type specimen book.
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a type specimen book.
-                 Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a type specimen book.
+                <h2>About TEDx, x = independently organized event</h2>
+                <p>In the spirit of ideas worth spreading, TEDx is a program of
+                    local, self-organized events that bring people together to
+                    share a TED-like experience. At a TEDx event, TED Talks
+                    video and live speakers combine to spark deep discussion
+                    and connection. These local, self-organized events are
+                    branded TEDx, where x = independently organized TED event.
+                    The TED Conference provides general guidance for the TEDx
+                    program, but individual TEDx events are self-organized.
+                    (Subject to certain rules and regulations.)
+                 </p>
+                <h2>About TED</h2>
+                <p>TED is a nonprofit organization devoted to Ideas Worth
+                    Spreading. Started as a four-day conference in California 30
+                    years ago, TED has grown to support its mission with
+                    multiple initiatives. The two annual TED Conferences invite
+                    the world's leading thinkers and doers to speak for
+                    18 minutes or less. Many of these talks are then made
+                    available, free, at <link href="www.ted.com">ted.com</link>
+                </p>
+                <h2>About the organizing committee</h2>
+                <p>
+                    Our faces
+                </p>
             </div>
         </div>
     </section>
@@ -129,6 +140,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Speakers</h2>
+                Speakers invitation are on their way! We are also organising an
+                self nomationfeaturing
+                self nomination speakers.
             </div>
         </div>
     </section>
