Underline in peoples' names

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <img src="img/dianbo.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
             <div class="col-md-3"></div>
             <div class="col-md-9">
-                <p>From China, Dianbo Liu is a PhD candidate in Computational/physical Biology based in University of Dundee.
+                <p>From China, <ins>Dianbo Liu</ins> is a PhD candidate in Computational/physical Biology based in University of Dundee.
                     He is interested in linking knowledge from unrelated fields and making innovative but useful inventions.</p>
             </div>
         </div>
@@ -150,7 +150,7 @@
         <div class="row">
             <img src="img/gillian.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
             <div class="col-md-9">
-                <p>Gillian Dunphy was born and raised in Glasgow but was compelled to make the lengthy journey to Dundee after being lured by its East coast charm.
+                <p><ins>Gillian Dunphy</ins> was born and raised in Glasgow but was compelled to make the lengthy journey to Dundee after being lured by its East coast charm.
                     She is currently studying for a PhD in Immunology at the University of Dundee.
                     She is the volunteer coordinator and part of the organising committee for TEDxUoD.</p>
             </div>
@@ -163,7 +163,7 @@
             <img src="img/stefan.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
             <div class="col-md-3"></div>
             <div class="col-md-9">
-                <p>Stefan Tomov is a recent University of Dundeee graduate in the study of Economics and Politics.
+                <p><ins>Stefan Tomov</ins> is a recent University of Dundeee graduate in the study of Economics and Politics.
                     He comes from Bulgaria and is the current Deputy President of Dundee University Students' Association. </p>
             </div>
         </div>
@@ -171,7 +171,7 @@
         <div class="row">
             <img src="img/thiago.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
             <div class="col-md-9">
-                <p>Thiago Britto-Borges is a PhD student at Dundee’s Computational Biology lab, where his main job is trying to
+                <p><ins>Thiago Britto-Borges</ins> is a PhD student at Dundee’s Computational Biology lab, where his main job is trying to
                     understand how certain cellular signals affect protein structure and function. Thiago likes to try to
                     understand stuff even out of working hours, and that is why he is helping organising this TedX event: spreading
                     knowledge is fun. </p>
@@ -183,7 +183,7 @@
             <img src="img/sarah.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
             <div class="col-md-3"></div>
             <div class="col-md-9">
-                <p>Sarah-Lena Offenburger is pursuing a PhD in Neurobiology at the College of Life Sciences in Dundee.
+                <p><ins>Sarah-Lena Offenburger</ins> is pursuing a PhD in Neurobiology at the College of Life Sciences in Dundee.
                     More precisely, she is studying the design and defence of brain cells that use dopamine to
                     regulate reward behaviours and movement. For her experiments she is working with a cute little (1 mm)
                     worm called <em>C. elegans</em>. When Sarah is not in the lab, you will probably find her doing sports, taking
@@ -195,7 +195,7 @@
         <div class="row">
             <img src="img/fabio.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
             <div class="col-md-9">
-                <p>From Portugal, F&aacute;bio Madeira is currently a student in the Wellcome Trust PhD programme in Cell and Molecular
+                <p>From Portugal, <ins>F&aacute;bio Madeira</ins> is currently a student in the Wellcome Trust PhD programme in Cell and Molecular
                     Biology in Dundee. He is currently working in a computational biology project. When he is away from the
                     computer, he can be found at the swimming pool or most likely at the music room,
                     where he dives into his piano improvisation.</p>
@@ -207,7 +207,7 @@
             <img src="img/darya.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
             <div class="col-md-3"></div>
             <div class="col-md-9">
-                <p>Darya Baranovka is the president of the Enterprise Gym, University of Dundee department which teaches students
+                <p><ins>Darya Baranovka</ins> is the president of the Enterprise Gym, University of Dundee department which teaches students
                     about entrepreneurship. She come from the small and pretty town of Liepaya, which is located on the Latvian
                     coast of the Baltic Sea. She likes traveling and visiting new places. In her free time at home she enjoys cooking and drawing on silk.</p>
             </div>
@@ -216,7 +216,7 @@
         <div class="row">
             <img src="img/kushal.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
             <div class="col-md-9">
-                <p>Originally from the island of Mauritius, Kuchal Rugjee moved to Dundee to pursue a PhD in Life Sciences,
+                <p>Originally from the island of Mauritius, <ins>Kuchal Rugjee</ins> moved to Dundee to pursue a PhD in Life Sciences,
                     more specifically looking at treatments for Cystic Fibrosis. His role in the team is to co-ordinate the
                     overall organisation of the TEDx event and to ensure that progress is being made.</p>
             </div>
@@ -227,7 +227,7 @@
             <img src="img/sam.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
             <div class="col-md-3"></div>
             <div class="col-md-9">
-                <p>Sam Watkins is a University Student currently studying Computer Science at the University of Dundee.
+                <p><ins>Sam Watkins</ins> is a University Student currently studying Computer Science at the University of Dundee.
                     He is in his third year now and interested in Web Programming, Product Development and Entrepreneurship.</p>
             </div>
         </div>
