Fixed youtube responsive frame size and edited the footer

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
                     video and live speakers combine to spark deep discussion
                     and connection.
                  </p>
-                <p><iframe width="560" height="315" src="//www.youtube.com/embed/d0NHOpeczUU" frameborder="0" allowfullscreen></iframe></p>
+                <div class="videoWrapper">
+                        <iframe width="560" height="315" src="//www.youtube.com/embed/d0NHOpeczUU" frameborder="0" allowfullscreen></iframe>
+                    </div>
                 </br></br></br>
                 <h2>TEDx University of Dundee</h2>
                 <p>TEDx University Of Dundee is a student-led TEDx event, aiming at inspiring new ideas
