Fixed youtube responsive frame size and edited the footer

--- a/index.html
+++ b/index.html
@@ -328,6 +328,12 @@
         <span class="network-name">Facebook</span></a>
          </ul></br></br>
     </footer>
+    <div class="row text-center">
+            <div class="col-lg-8 col-lg-offset-2">
+                <p class="small"><a href="https://500px.com/photo/42495360/dundee-by-night-by-mark-haldane?from=user">Dundee by Night</a> by Mark Haldane</br>
+                Copyright © 2015 TEDxUniversityOfDundee. All rights reserved. This independent TEDx event is operated under license from TED.</p>
+            </div>
+        </div>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
