Made the colors consistent.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                <button type="button" class="navbar-toggle pull-left" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-btn page-scroll" href="#page-top">
@@ -305,15 +305,15 @@
                   <div class="col-md-3"><a href="http://www.dundee.ac.uk/" target='_blank'><img src="img/uodundee.png" alt="Image" style="max-width:100%;"></a></div>
                   <div class="col-md-3"><a href="http://www.dusa.co.uk" target='_blank'><img src="img/dusa.png" alt="Image" style="max-width:100%;"></a></div>
                   <div class="col-md-3"><a href="https://enterprise-gym.com" target='_blank'><img src="img/teg.png" alt="Image" style="max-width:100%;"></a></div>
-                  <div class="col-md-3"><img src="http://placehold.it/200x150/de935f&text=partners" alt="Image" style="max-width:100%;"></div>
+                  <!--<div class="col-md-3"><img src="http://placehold.it/200x150/de935f&text=partners" alt="Image" style="max-width:100%;"></div>-->
             </div><!--.row-->
             </br>
-            <div class="row">
-                  <div class="col-md-3"><img src="http://placehold.it/200x150/c1ab87&text=partners" alt="Image" style="max-width:100%;"></div>
-                  <div class="col-md-3"><img src="http://placehold.it/200x150/de935f&text=partners" alt="Image" style="max-width:100%;"></div>
-                  <div class="col-md-3"><img src="http://placehold.it/200x150/c1ab87&text=partners" alt="Image" style="max-width:100%;"></div>
-                  <div class="col-md-3"><img src="http://placehold.it/200x150/de935f&text=partners" alt="Image" style="max-width:100%;"></div>
-            </div><!--.row-->
+            <!--<div class="row">-->
+                  <!--<div class="col-md-3"><img src="http://placehold.it/200x150/c1ab87&text=partners" alt="Image" style="max-width:100%;"></div>-->
+                  <!--<div class="col-md-3"><img src="http://placehold.it/200x150/de935f&text=partners" alt="Image" style="max-width:100%;"></div>-->
+                  <!--<div class="col-md-3"><img src="http://placehold.it/200x150/c1ab87&text=partners" alt="Image" style="max-width:100%;"></div>-->
+                  <!--<div class="col-md-3"><img src="http://placehold.it/200x150/de935f&text=partners" alt="Image" style="max-width:100%;"></div>-->
+            <!--</div>&lt;!&ndash;.row&ndash;&gt;-->
         </div><!--.container-->
     </section>
 
@@ -321,7 +321,7 @@
     </br></br></br></br></br></br></br></br>
     <footer id="foot">
          <ul class="list-inline banner-social-buttons text-center">
-          <a href="mailto:tedx@dundee.ac.uk" class="btn btn-default btn-lg">tedx@dundee.ac.uk</a>&nbsp;&nbsp;&nbsp;
+          <a href="mailto:tedx@dundee.ac.uk" class="btn btn-default btn-lg hidden-phone visible-tablet visible-desktop">tedx@dundee.ac.uk</a>&nbsp;&nbsp;&nbsp;
          <a href="https://twitter.com/TEDxUoDundee" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i>
          <span class="network-name">Twitter</span></a>&nbsp;&nbsp;&nbsp;
          <a href="https://www.facebook.com/TEDxUoD" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i>
